resume download, writing touch up

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                 <button class="experience-card__header" aria-expanded="false">
                     <div class="experience-card__summary">
                         <h3 class="experience-card__title">Research Assistant</h3>
-                        <span class="experience-card__meta">2025-Present · [Professor Name]'s Lab · LLMs, Graph
+                        <span class="experience-card__meta">2025-Present · Yuzhou Chen's Lab · LLMs, Graph
                             Unlearning</span>
                     </div>
                     <span class="experience-card__toggle" aria-hidden="true">+</span>
@@ -391,7 +391,7 @@
                 </ul>
             </div>
             <div class="footer__resume">
-                <p>Traditional format: <a href="assets/resume.pdf">resume.pdf</a></p>
+                <p>Traditional format: <a href="assets/hank_sha_resume.pdf" download>resume.pdf</a></p>
             </div>
         </footer>
     </main>
