--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <!-- About Section -->
         <section class="section" id="about">
             <h2 class="section__title">About</h2>
-            <p>I'm a undergraduate senior studying Statistics & Data Science, working across AI research and
+            <p>I'm an undergraduate senior studying Statistics & Data Science, working across AI research and
                 engineering. I'm
                 interested in problems where modeling, systems, and product constraints intersect—especially in applied
                 ML and LLM-based systems.</p>
