added tldr, linked github

--- a/index.html
+++ b/index.html
@@ -178,6 +178,26 @@
                     <span class="experience-card__toggle" aria-hidden="true">+</span>
                 </button>
                 <div class="experience-card__content">
+                    <div class="experience-card__tldr">
+                        <div class="experience-card__tldr-item">
+                            <span class="experience-card__tldr-label">The Gist:</span>
+                            <span class="experience-card__tldr-value">Applied ML to Phase II clinical trial data for MDD
+                                (Major Depressive Disorder). Conducted deep exploratory data analysis to find signals in
+                                high-noise environments.</span>
+                        </div>
+                        <div class="experience-card__tldr-item">
+                            <span class="experience-card__tldr-label">Key Win:</span>
+                            <span class="experience-card__tldr-value">Provided a high-integrity technical audit that
+                                correctly identified ML as not suitable for the dataset, preventing action on unreliable
+                                signals.</span>
+                        </div>
+                        <div class="experience-card__tldr-item">
+                            <span class="experience-card__tldr-label">Tech:</span>
+                            <span class="experience-card__tldr-value">XGBoost, Statistical Modeling, EDA,
+                                Biostatistics.</span>
+                        </div>
+                    </div>
+                    <hr class="experience-card__tldr-divider">
                     <div class="experience-card__section">
                         <h4>Context</h4>
                         <p>Analyzed Phase II clinical trial data for an MDD drug at a pre-IPO biotech company.
@@ -231,6 +251,25 @@
                     <span class="experience-card__toggle" aria-hidden="true">+</span>
                 </button>
                 <div class="experience-card__content">
+                    <div class="experience-card__tldr">
+                        <div class="experience-card__tldr-item">
+                            <span class="experience-card__tldr-label">The Gist:</span>
+                            <span class="experience-card__tldr-value">Second author on research involving LLMs and Graph
+                                Unlearning. Built experimental pipelines and optimized local model inference under
+                                compute constraints.</span>
+                        </div>
+                        <div class="experience-card__tldr-item">
+                            <span class="experience-card__tldr-label">Key Win:</span>
+                            <span class="experience-card__tldr-value">Achieved a 4× speedup in experiment runtimes by
+                                optimizing CUDA configurations and quantization settings.</span>
+                        </div>
+                        <div class="experience-card__tldr-item">
+                            <span class="experience-card__tldr-label">Tech:</span>
+                            <span class="experience-card__tldr-value">PyTorch, Hugging Face, CUDA, vLLM, Graph Neural
+                                Networks.</span>
+                        </div>
+                    </div>
+                    <hr class="experience-card__tldr-divider">
                     <div class="experience-card__section">
                         <h4>Context</h4>
                         <p>Research assistant on projects involving large language models, graph unlearning, and
@@ -283,6 +322,24 @@
                     <span class="experience-card__toggle" aria-hidden="true">+</span>
                 </button>
                 <div class="experience-card__content">
+                    <div class="experience-card__tldr">
+                        <div class="experience-card__tldr-item">
+                            <span class="experience-card__tldr-label">The Gist:</span>
+                            <span class="experience-card__tldr-value">Developed a commercial lens for evaluating AI and
+                                deep-tech startups at pre-seed and seed stages.</span>
+                        </div>
+                        <div class="experience-card__tldr-item">
+                            <span class="experience-card__tldr-label">Key Win:</span>
+                            <span class="experience-card__tldr-value">Built strong technical communication and sourcing
+                                skills, bridging deep-tech capabilities with market viability.</span>
+                        </div>
+                        <div class="experience-card__tldr-item">
+                            <span class="experience-card__tldr-label">Focus:</span>
+                            <span class="experience-card__tldr-value">Startup Evaluation, Market Research, Professional
+                                Outreach.</span>
+                        </div>
+                    </div>
+                    <hr class="experience-card__tldr-divider">
                     <div class="experience-card__section">
                         <h4>Context</h4>
                         <p>Part-time scout role at an early-stage fund (pre-seed, seed, early Series A) investing across
@@ -330,6 +387,25 @@
                     <span class="experience-card__toggle" aria-hidden="true">+</span>
                 </button>
                 <div class="experience-card__content">
+                    <div class="experience-card__tldr">
+                        <div class="experience-card__tldr-item">
+                            <span class="experience-card__tldr-label">The Gist:</span>
+                            <span class="experience-card__tldr-value">Scaled an LLM-based developer evaluation system to
+                                1.4M+ users. Focused on prompt engineering, cost optimization, and reducing algorithmic
+                                bias.</span>
+                        </div>
+                        <div class="experience-card__tldr-item">
+                            <span class="experience-card__tldr-label">Key Win:</span>
+                            <span class="experience-card__tldr-value">Reduced API costs by 13% and improved model
+                                performance by 20% through iterative benchmarking of GPT, Gemini, and Claude.</span>
+                        </div>
+                        <div class="experience-card__tldr-item">
+                            <span class="experience-card__tldr-label">Tech:</span>
+                            <span class="experience-card__tldr-value">Python, LLMs, NLP, ast-grep, Supervised
+                                Learning.</span>
+                        </div>
+                    </div>
+                    <hr class="experience-card__tldr-divider">
                     <div class="experience-card__section">
                         <h4>Context</h4>
                         <p>GitRoll is a pre-seed HR-tech startup that scans GitHub repositories to evaluate developer
@@ -386,7 +462,7 @@
                 <h2 class="section__title">Contact</h2>
                 <ul class="contact-list">
                     <li><a href="mailto:you@example.com">hankssha@gmail.com</a></li>
-                    <li><a href="https://github.com/yourusername">GitHub</a></li>
+                    <li><a href="https://github.com/cubeerea">GitHub</a></li>
                     <li><a href="https://medium.com/@cubeerea">Medium</a></li>
                     <li><a href="https://www.linkedin.com/in/hank-sha/">LinkedIn</a></li>
                 </ul>
