fixed about section, added email hyperlink

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <!-- About Section -->
         <section class="section" id="about">
             <h2 class="section__title">About</h2>
-            <p>I'm an undergraduate senior studying Statistics & Data Science, working across AI research and
+            <p>I'm a graduating senior studying Statistics & Data Science @ UCSB, working across AI research and
                 engineering. I'm
                 interested in problems where modeling, systems, and product constraints intersect—especially in applied
                 ML and LLM-based systems.</p>
@@ -461,7 +461,7 @@
             <div class="footer__contact">
                 <h2 class="section__title">Contact</h2>
                 <ul class="contact-list">
-                    <li><a href="mailto:you@example.com">hankssha@gmail.com</a></li>
+                    <li><a href="hankssha@gmail.com">email me</a></li>
                     <li><a href="https://github.com/cubeerea">GitHub</a></li>
                     <li><a href="https://medium.com/@cubeerea">Medium</a></li>
                     <li><a href="https://www.linkedin.com/in/hank-sha/">LinkedIn</a></li>
