--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
             <div class="footer__contact">
                 <h2 class="section__title">Contact</h2>
                 <ul class="contact-list">
-                    <li><a href="hankssha@gmail.com">email me</a></li>
+                    <li><a href="mailto:hankssha@gmail.com">email me</a></li>
                     <li><a href="https://github.com/cubeerea">GitHub</a></li>
                     <li><a href="https://medium.com/@cubeerea">Medium</a></li>
                     <li><a href="https://www.linkedin.com/in/hank-sha/">LinkedIn</a></li>
