removed extension tag on vercel

--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
                 </ul>
             </div>
             <div class="footer__resume">
-                <p>Traditional format: <a href="resume.html">view resume</a></p>
+                <p>Traditional format: <a href="/resume">view resume</a></p>
             </div>
         </footer>
     </main>
