--- a/resume.html
+++ b/resume.html
@@ -23,7 +23,7 @@
             }
         }
     </script>
-    <script src="js/theme.js"></script>
+    <script src="/js/theme.js"></script>
     <style>
         /* Smooth theme transition — enabled after initial render */
         html.theme-ready *,
@@ -147,7 +147,7 @@
                 </svg>
                 <p class="text-slate-600 dark:text-slate-300 font-medium mb-2">Unable to load resume</p>
                 <p class="text-sm text-slate-500 dark:text-slate-400 mb-4">The PDF file could not be loaded.</p>
-                <a href="assets/hank_sha_resume.pdf" download="hank_sha_resume.pdf"
+                <a href="/assets/hank_sha_resume.pdf" download="hank_sha_resume.pdf"
                     class="inline-flex items-center gap-2 px-4 py-2 bg-blue-600 text-white text-sm font-medium rounded-lg hover:bg-blue-700 transition-colors">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24"
                         stroke="currentColor" stroke-width="2">
@@ -167,7 +167,7 @@
     </main>
 
     <!-- Floating Action Button (Download) -->
-    <a href="assets/hank_sha_resume.pdf" download="hank_sha_resume.pdf" id="downloadFab"
+    <a href="/assets/hank_sha_resume.pdf" download="hank_sha_resume.pdf" id="downloadFab"
         class="fixed bottom-6 right-6 z-50 flex items-center justify-center w-14 h-14 bg-blue-600 hover:bg-blue-700 text-white rounded-full shadow-lg hover:shadow-xl transition-all transform hover:scale-105 active:scale-95"
         aria-label="Download resume">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"
@@ -199,7 +199,7 @@
         // Load PDF
         async function loadPDF() {
             try {
-                pdfDoc = await pdfjsLib.getDocument('assets/hank_sha_resume.pdf').promise;
+                pdfDoc = await pdfjsLib.getDocument('/assets/hank_sha_resume.pdf').promise;
                 loadingState.classList.add('hidden');
                 canvasContainer.classList.remove('hidden');
                 canvasContainer.classList.add('flex', 'flex-col', 'items-center');
